# 3d-software-renderer

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: camera.cpp  camera.h  clipping.cpp  clipping.h  display.cpp  display.h  linear_algebra.cpp  linear_algebra.h  main.cpp  model.cpp  model.h  renderer.cpp  renderer.h
